--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="">Fundación</a></li>
         <li><a href="">Responsabilidas social</a></li>
         <li><a href="">Aliados</a></li>
-        <li><a href="">Resultados</a></li>
+        <li><a href="resultados.html">Resultados</a></li>
         <li><a href="">Informe anual</a></li>
       </ul>
     </div>
