--- a/resultados.html
+++ b/resultados.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/resultados.css">
-  <title>Inicio - Devolver a la comunidad</title>
+  <title>Resultados - Devolver a la comunidad</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="">Fundación</a></li>
         <li><a href="">Responsabilidas social</a></li>
-        <li><a href="">Aliados</a></li>
+        <li><a href="aliados.html">Aliados</a></li>
         <li class="current"><a href="resultados.html">Resultados</a></li>
         <li><a href="">Informe anual</a></li>
       </ul>
