--- a/resultados.html
+++ b/resultados.html
@@ -94,6 +94,12 @@
     </div>
   </div>
 
+<div class="cont-general-ultimos">
+
+  <img class="dec-circulos" src="img/circulos-dec.png" alt="">
+  <img class="dec-circulos-izq" src="img/circulos-dec.png" alt="">
+  <img class="dec-pintura-izq" src="img/pintura3-dec.png" alt="">
+
   <!-- Titulo -->
   <div class="container">
     <p class="title">
@@ -236,7 +242,10 @@
     </div>
   </div>
 
+</div>
+
   <footer>
+    <img class="dec-pintura" src="img/pintura-dec.png" alt="">
     <div class=" container">
       <hr>
       <div class="grid">
