todos los archivos descargables

--- a/fundacion.html
+++ b/fundacion.html
@@ -6,6 +6,7 @@
     <title>Fundación - Devolver a la comunidad</title>
     <link rel="stylesheet" href="css/fundacion.css">
 </head>
+
 <body>
 
     <header>
@@ -20,14 +21,14 @@
             <span></span>
         </div>
         <div class="container">
-    
+
             <ul class="menu">
-                <li class="current"><a href="index.html">Inicio</a></li>
-                <li><a href="">Fundación</a></li>
-                <li><a href="">Responsabilidas social</a></li>
-                <li><a href="">Aliados</a></li>
-                <li><a href="">Resultados</a></li>
-                <li><a href="">Informe anual</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li class="current"><a href="fundacion.html">Fundación</a></li>
+                <li><a href="responsabilidadsocial.html">Responsabilidas social</a></li>
+                <li><a href="aliados.html">Aliados</a></li>
+                <li><a href="resultados.html">Resultados</a></li>
+                <li><a href="informeanual.html">Informe anual</a></li>
             </ul>
         </div>
     </nav>
@@ -45,7 +46,7 @@
                 <div class="desc">
                     <h2>FUNDACIÓN <span>THE HOME DEPOT MÉXICO</span></h2>
                     <p>
-                        Nuestra Fundación nace en 2016 con el objetivo de mejorar las viviendas de personas en situación de vulnerabilidad, 
+                        Nuestra Fundación nace en 2016 con el objetivo de mejorar las viviendas de personas en situación de vulnerabilidad,
                         mejorar los espacios públicos del país y apoyar a comunidades afectadas ante desastres naturales.
                     </p>
                 </div>
@@ -81,7 +82,7 @@
             <div class="contenedor-informacion">
                 <img src="img/logo-ayuda.png" alt="">
                 <p>
-                    En el marco de algún desastre natural en el país, buscamos ser siempre los primeros en llegar y los últimos en irnos. En alianza con instituciones, apoyamos a comunidades 
+                    En el marco de algún desastre natural en el país, buscamos ser siempre los primeros en llegar y los últimos en irnos. En alianza con instituciones, apoyamos a comunidades
                     afectadas por desastres naturales, a través de donativos.
                 </p>
                 <p>
@@ -108,7 +109,7 @@
             <div class="contenedor-informacion">
                 <img src="img/logo-donacion.png" alt="">
                 <p>
-                    Estamos comprometidos a proveer a nuestros clientes productos de la mejor calidad. Donación de mercancía nace mediante el fin del ciclo de vida de algunos productos 
+                    Estamos comprometidos a proveer a nuestros clientes productos de la mejor calidad. Donación de mercancía nace mediante el fin del ciclo de vida de algunos productos
                     en nuestros anaqueles, mismos que son destinados a donación. El donativo puede variar en la cantidad de artículos entre todas nuestras categorías.
                 </p>
                 <p>
@@ -118,7 +119,7 @@
                 <ul>
                     <li>Crea tu cuenta en el apartado de “Inicio”</li>
                     <li>Registra tu proyecto</li>
-                    <li> Sube tu documentación</li>
+                    <li>Sube tu documentación</li>
                 </ul>
                 <p>
                     Una vez registrada tu información, la solicitud pasará a un proceso de evaluación. <br>
@@ -154,8 +155,8 @@
             <div class="contenedor-informacion">
                 <img src="img/logo-pintura.png" alt="">
                 <p>
-                    Estamos comprometidos a brindar un excelente servicio a nuestros clientes, por ello en nuestros centros de color buscamos igualar exactamente los colores que tienen planeado 
-                    para llevar acabo su proyecto de remodelación, por lo que, mensualmente acumulamos la pintura que no se haya adquirido y la destinamos a donación. El donativo consta 
+                    Estamos comprometidos a brindar un excelente servicio a nuestros clientes, por ello en nuestros centros de color buscamos igualar exactamente los colores que tienen planeado
+                    para llevar acabo su proyecto de remodelación, por lo que, mensualmente acumulamos la pintura que no se haya adquirido y la destinamos a donación. El donativo consta
                     de una variación de colores, presentaciones y marcas.
                 </p>
                 <p>
@@ -165,7 +166,7 @@
                 <ul>
                     <li>Crea tu cuenta en el apartado de “Inicio”</li>
                     <li>Registra tu proyecto</li>
-                    <li> Sube tu documentación</li>
+                    <li>Sube tu documentación</li>
                 </ul>
                 <p>
                     Una vez registrada tu información, la solicitud pasará a un proceso de evaluación. En caso de que su proyecto sea autorizado, estaremos contactándonos con ustedes.
@@ -200,8 +201,8 @@
             <div class="contenedor-informacion">
                 <img src="img/logo-unidos.png" alt="">
                 <p>
-                    Estamos convencidos de que la unión de esfuerzos multiplica los resultados. Cada año invitamos a nuestros aliados comerciales a sumarse a campañas de apoyo social 
-                    a través de un donativo económico, el cual es duplicado por The Home Depot con la finalidad de apoyar a comunidades en situación de vulnerabilidad. 
+                    Estamos convencidos de que la unión de esfuerzos multiplica los resultados. Cada año invitamos a nuestros aliados comerciales a sumarse a campañas de apoyo social
+                    a través de un donativo económico, el cual es duplicado por The Home Depot con la finalidad de apoyar a comunidades en situación de vulnerabilidad.
                 </p>
                 <p>
                     Esta iniciativa inició hace 6 años y desde entonces hemos logrado destinar más de <span>$24.7 MDP</span> en apoyos.
@@ -214,7 +215,7 @@
                 <br><br>
                 <h3>¿Cómo solicitar apoyo?</h3>
                 <ul>
-                    <li><a href="#" targte="_blank">Descarga la convocatoria aquí</a></li>
+                    <li><a download href="files/Convocatoria UXUMC.pptx" targte="_blank">Descarga la convocatoria aquí</a></li>
                     <li>Llénala correctamente</li>
                     <li>Envíala al correo: <a href="mailto:responsabilidad_social@homedepot.com.mx" target="_blank">responsabilidad_social@homedepot.com.mx</a></li>
                 </ul>
@@ -225,14 +226,35 @@
         </div>
     </section>
 
+
+    <footer>
+        <div class="container">
+            <hr>
+            <div class="grid">
+                <div class="column">
+                    <a href="index.html">Inicio</a>
+                    <a href="fundacion.html">Fundacion</a>
+                </div>
+                <div class="column">
+                    <a href="responsabilidadsocial.html">Responsabilidad Social</a>
+                    <a href="aliados.html">Aliados</a>
+                </div>
+                <div class="column">
+                    <a href="resultados.html">Resultados</a>
+                    <a href="informeanual.html">Informe Anual</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
     $(document).ready(function () {
-        $('.contenedor-general-programas .contenedor-programas .programa').click(function(){
+        $('.contenedor-general-programas .contenedor-programas .programa').click(function () {
             $('html, body').animate({
-                scrollTop: $( $(this).attr('href') ).offset().top
+                scrollTop: $($(this).attr('href')).offset().top
             }, 500);
             return false;
         });
