--- a/informeanual.html
+++ b/informeanual.html
@@ -6,6 +6,7 @@
     <title>Fundación - Informe Anual</title>
     <link rel="stylesheet" href="css/informeanual.css">
 </head>
+
 <body>
 
     <header>
@@ -20,14 +21,13 @@
             <span></span>
         </div>
         <div class="container">
-    
             <ul class="menu">
-                <li class="current"><a href="index.html">Inicio</a></li>
-                <li><a href="">Fundación</a></li>
-                <li><a href="">Responsabilidas social</a></li>
-                <li><a href="">Aliados</a></li>
-                <li><a href="">Resultados</a></li>
-                <li><a href="">Informe anual</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="fundacion.html">Fundación</a></li>
+                <li><a href="responsabilidadsocial.html">Responsabilidas social</a></li>
+                <li><a href="aliados.html">Aliados</a></li>
+                <li><a href="resultados.html">Resultados</a></li>
+                <li class="current"><a href="informeanual.html">Informe anual</a></li>
             </ul>
         </div>
     </nav>
@@ -43,30 +43,50 @@
                 <h2>DA CLIC PARA CONOCER NUESTROS INFORMES</h2>
             </div>
             <div class="contenedor-informes">
-                <div class="cont-informe">
+                <a class="cont-informe" href="files/JuntosLogramosMas_IA_THD_2022_comprimido.pdf" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2022</span></h2>
                         <p>clic para descargar</p>
                     </div>
-                </div>
-                <div class="cont-informe">
+                </a>
+                <a class="cont-informe" href="files/Informe 2021.pdf" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2021</span></h2>
                         <p>clic para descargar</p>
                     </div>
-                </div> 
-                <div class="cont-informe">
+                </a>
+                <a class="cont-informe" href="files/Informe 2020.pdf" download>
                     <img src="img/cuadro.jpg" alt="">
                     <div class="cont-info">
                         <h2>Informe <br> <span>2020</span></h2>
                         <p>clic para descargar</p>
                     </div>
-                </div> 
+                </a>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <hr>
+            <div class="grid">
+                <div class="column">
+                    <a href="index.html">Inicio</a>
+                    <a href="fundacion.html">Fundacion</a>
+                </div>
+                <div class="column">
+                    <a href="responsabilidadsocial.html">Responsabilidad Social</a>
+                    <a href="aliados.html">Aliados</a>
+                </div>
+                <div class="column">
+                    <a href="resultados.html">Resultados</a>
+                    <a href="informeanual.html">Informe Anual</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
