--- a/resultados.html
+++ b/resultados.html
@@ -9,333 +9,271 @@
   <link rel="stylesheet" href="css/resultados.css">
   <title>Resultados - Devolver a la comunidad</title>
 </head>
-
-<body>
-
-  <header>
-    <div class="container">
-      <img src="img/thd-logo.jpg" alt="" class="thd-logo">
-      <img src="img/logo.svg" alt="" class="logo">
-    </div>
-  </header>
-  <nav>
-    <div class="burguer">
-      <span></span>
-      <span></span>
-    </div>
-    <div class="container">
-
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="">Fundación</a></li>
-        <li><a href="">Responsabilidas social</a></li>
-        <li><a href="aliados.html">Aliados</a></li>
-        <li class="current"><a href="resultados.html">Resultados</a></li>
-        <li><a href="">Informe anual</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="banner-cont">
-    <img src="img/resultados-banner.jpg" alt="">
-  </div>
-
-  <!-- Titulo -->
+<header>
   <div class="container">
-    <p class="title">
-      NUESTRO COMPROMISO CON MÉXICO <strong>SIGUE CRECIENDO</strong>
-    </p>
+    <img src="img/thd-logo.jpg" alt="" class="thd-logo">
+    <img src="img/logo.svg" alt="" class="logo">
   </div>
-
-  <!-- Facts -->
-  <div class="facts-cont">
-    <div class="container">
-      <div class="grid">
-        <div class="item">
-          <div class="white-sqr">
-            +$1,300 <small>MDP</small>
-          </div>
-          <div class="desc">
-            <div class="icon">
-              <img src="img/icon-pintura.png" alt="">
-            </div>
-            <div class="text">
-              Donados en pintura y mercancía
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="white-sqr">
-            +$100 <small>MDP</small>
-          </div>
-          <div class="desc">
-            <div class="icon">
-              <img src="img/icon-fondos.png" alt="">
-            </div>
-            <div class="text">
-              Recaudados mediante nuestra Colecta
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="white-sqr">
-            +7000
-          </div>
-          <div class="desc">
-            <div class="icon">
-              <img src="img/icon-equipo.png" alt="">
-            </div>
-            <div class="text">
-              Equipos Depot<br>realizados
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+</header>
+<nav>
+  <div class="burguer">
+    <span></span>
+    <span></span>
   </div>
-
-  <!-- Titulo -->
-  <div class="container">
-    <p class="title">
-      <strong>NUESTRO APOYO</strong> EN LOS ÚLTIMOS AÑOS
-    </p>
-  </div>
-
   <div class="container">
 
-    <!-- 2022 -->
-    <div class="facts-shapes owl-carousel owl-theme  slider-2022">
-      <div data-merge="2" class="item year">
-        <img src="img/gray-shape.svg" alt="">
-        <div class="text">
-          2022
-        </div>
+    <ul class="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="fundacion.html">Fundación</a></li>
+      <li><a href="responsabilidadsocial.html">Responsabilidas social</a></li>
+      <li><a href="aliados.html">Aliados</a></li>
+      <li class="current"><a href="resultados.html">Resultados</a></li>
+      <li><a href="informeanual.html">Informe anual</a></li>
+    </ul>
+  </div>
+</nav>
 
-      </div>
-      <div data-merge="1" class="item">
-        <img src="img/third-shape.svg" alt="">
-        <div class="text">
-          <p>
-            <span>+$52 MDP</span>
-            donados en pintura<br>
-            y mercancía
-          </p>
-        </div>
-        <div class="icon">
-          <img src="img/icon-pintura.png" alt="">
-        </div>
-      </div>
-      <div data-merge="1" class="item">
-        <img src="img/second-shape.svg" alt="">
-        <div class="text">
-          <p>
-            <span>+$31 MDP</span>
-            recaudados<br>
-            en Colecta
-          </p>
-        </div>
-        <div class="icon">
-          <img src="img/icon-fondos.png" alt="">
-        </div>
-      </div>
-      <div data-merge="1" class="item last">
-        <img src="img/last-shape.svg" alt="">
-        <div class="text">
-          <p>
-            <span>406</span>
-            Equipos Depot<br>
-            realizados
-          </p>
-        </div>
-        <div class="icon">
-          <img src="img/icon-equipo.png" alt="">
-        </div>
-      </div>
-    </div>
-    <hr class="orange">
+<div class="banner-cont">
+  <img src="img/resultados-banner.jpg" alt="">
+</div>
 
-    <!-- 2021 -->
-    <div class="facts-shapes alt owl-carousel owl-theme  slider-2021">
-      <div class="item last" data-merge="1">
-        <img src="img/last-alt.svg" alt="">
-        <div class="text">
-          <p>
+<!-- Titulo -->
+<div class="container">
+  <p class="title">
+    NUESTRO COMPROMISO CON MÉXICO <strong>SIGUE CRECIENDO</strong>
+  </p>
+</div>
 
-            <span>+$57 MDP</span>
-            donados en pintura<br>
-            y mercancía
-          </p>
+<!-- Facts -->
+<div class="facts-cont">
+  <div class="container">
+    <div class="grid">
+      <div class="item">
+        <div class="white-sqr">
+          +$1,300 <small>MDP</small>
         </div>
-        <div class="icon">
-          <img src="img/icon-pintura.png" alt="">
+        <div class="desc">
+          <div class="icon">
+            <img src="img/icon-pintura.png" alt="">
+          </div>
+          <div class="text">
+            Donados en pintura y mercancía
+          </div>
         </div>
       </div>
-      <div class="item" data-merge="1">
-        <img src="img/shape-alt.svg" alt="">
-        <div class=" text">
-          <p>
-            <span>+$26 MDP</span>
-            recaudados<br>
-            en Colecta
-          </p>
+      <div class="item">
+        <div class="white-sqr">
+          +$100 <small>MDP</small>
         </div>
-        <div class="icon">
-          <img src="img/icon-fondos.png" alt="">
-        </div>
-      </div>
-      <div class="item year" data-merge="2">
-        <img src=" img/gray-shape-alt.svg" alt="">
-        <div class="text">
-          2021
-        </div>
-
-      </div>
-
-    </div>
-
-    <hr class="orange">
-
-    <!-- 2020 -->
-    <div class="facts-shapes owl-carousel owl-theme  slider-2020">
-      <div class="item year" data-merge="2">
-        <img src="img/gray-shape.svg" alt="">
-        <div class="text">
-          2020
+        <div class="desc">
+          <div class="icon">
+            <img src="img/icon-fondos.png" alt="">
+          </div>
+          <div class="text">
+            Recaudados mediante nuestra Colecta
+          </div>
         </div>
       </div>
-      <div class="item" data-merge="1">
-        <img src="img/third-shape.svg" alt="">
-        <div class="text">
-          <p>
-            <span>+$48 MDP</span>
-            donados en pintura<br>
-            y mercancía
-          </p>
+      <div class="item">
+        <div class="white-sqr">
+          +7000
         </div>
-        <div class="icon">
-          <img src="img/icon-pintura.png" alt="">
-        </div>
-      </div>
-      <div class="item last" data-merge="1">
-        <img src="img/last-shape.svg" alt="">
-        <div class="text">
-          <p>
-            <span>+10.5 MDP</span>
-            Recaudados<br>
-            en colecta
-          </p>
-        </div>
-        <div class="icon">
-          <img src="img/icon-fondos.png" alt="">
+        <div class="desc">
+          <div class="icon">
+            <img src="img/icon-equipo.png" alt="">
+          </div>
+          <div class="text">
+            Equipos Depot<br>realizados
+          </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <footer>
-    <div class=" container">
-      <hr>
-      <div class="grid">
-        <div class="column">
-          <a href="">Inicio</a>
-          <a href="">Fundacion</a>
-        </div>
-        <div class="column">
-          <a href="">Responsabilidad Social</a>
-          <a href="">Aliados</a>
-        </div>
-        <div class="column">
-          <a href="">Resultados</a>
-          <a href="">Informe Anual</a>
-        </div>
+<!-- Titulo -->
+<div class="container">
+  <p class="title">
+    <strong>NUESTRO APOYO</strong> EN LOS ÚLTIMOS AÑOS
+  </p>
+</div>
+
+<div class="container">
+
+  <!-- 2022 -->
+  <div class="facts-shapes owl-carousel owl-theme  slider-2022">
+    <div data-merge="2" class="item year">
+      <img src="img/gray-shape.svg" alt="">
+      <div class="text">
+        2022
+      </div>
+
+    </div>
+    <div data-merge="1" class="item">
+      <img src="img/third-shape.svg" alt="">
+      <div class="text">
+        <p>
+          <span>+$52 MDP</span>
+          donados en pintura<br>
+          y mercancía
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-pintura.png" alt="">
       </div>
     </div>
-  </footer>
+    <div data-merge="1" class="item">
+      <img src="img/second-shape.svg" alt="">
+      <div class="text">
+        <p>
+          <span>+$31 MDP</span>
+          recaudados<br>
+          en Colecta
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-fondos.png" alt="">
+      </div>
+    </div>
+    <div data-merge="1" class="item last">
+      <img src="img/last-shape.svg" alt="">
+      <div class="text">
+        <p>
+          <span>406</span>
+          Equipos Depot<br>
+          realizados
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-equipo.png" alt="">
+      </div>
+    </div>
+  </div>
+  <hr class="orange">
 
-  <script src="js/jquery.js"></script>
-  <script src="js/thd.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script>
-    $('.slider-2022').owlCarousel({
+  <!-- 2021 -->
+  <div class="facts-shapes alt owl-carousel owl-theme  slider-2021">
+    <div class="item last" data-merge="1">
+      <img src="img/last-alt.svg" alt="">
+      <div class="text">
+        <p>
+          <span>+$57 MDP</span>
+          donados en pintura<br>
+          y mercancía
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-pintura.png" alt="">
+      </div>
+    </div>
+    <div class="item" data-merge="1">
+      <img src="img/shape-alt.svg" alt="">
+      <div class=" text">
+        <p>
+          <span>+$26 MDP</span>
+          recaudados<br>
+          en Colecta
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-fondos.png" alt="">
+      </div>
+    </div>
+    <div class="item year" data-merge="2">
+      <img src=" img/gray-shape-alt.svg" alt="">
+      <div class="text">
+        2021
+      </div>
 
-      autoWidth: true,
+    </div>
 
-      merge: true,
-      mergeFit: true,
+  </div>
 
-      responsive: {
-        320: {
-          items: 1,
-          mergeFit: false,
-          center: true,
-          autoWidth: false
+  <hr class="orange">
 
-        }, 1024: {
-          items: 5,
-          autoWidth: true,
-          merge: true,
-          mergeFit: true,
+  <!-- 2020 -->
+  <div class="facts-shapes owl-carousel owl-theme  slider-2020">
+    <div class="item year" data-merge="2">
+      <img src="img/gray-shape.svg" alt="">
+      <div class="text">
+        2020
+      </div>
+    </div>
+    <div class="item" data-merge="1">
+      <img src="img/third-shape.svg" alt="">
+      <div class="text">
+        <p>
+          <span>+$48 MDP</span>
+          donados en pintura<br>
+          y mercancía
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-pintura.png" alt="">
+      </div>
+    </div>
+    <div class="item last" data-merge="1">
+      <img src="img/last-shape.svg" alt="">
+      <div class="text">
+        <p>
+          <span>+10.5 MDP</span>
+          Recaudados<br>
+          en colecta
+        </p>
+      </div>
+      <div class="icon">
+        <img src="img/icon-fondos.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
 
-        }
+<footer>
+  <div class="container">
+    <hr>
+    <div class="grid">
+      <div class="column">
+        <a href="index.html">Inicio</a>
+        <a href="fundacion.html">Fundacion</a>
+      </div>
+      <div class="column">
+        <a href="responsabilidadsocial.html">Responsabilidad Social</a>
+        <a href="aliados.html">Aliados</a>
+      </div>
+      <div class="column">
+        <a href="resultados.html">Resultados</a>
+        <a href="informeanual.html">Informe Anual</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<script src="js/jquery.js"></script>
+<script src="js/thd.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+
+<script>
+  $('.facts-shapes').owlCarousel({
+    autoWidth: true,
+    merge: true,
+    mergeFit: true,
+    responsive: {
+      320: {
+        items: 1,
+        mergeFit: false,
+        center: true,
+        autoWidth: false
+
+      }, 1024: {
+        items: 5,
+        autoWidth: true,
+        merge: true,
+        mergeFit: true,
+
       }
+    }
+  });
 
-
-    });
-
-    $('.slider-2021').owlCarousel({
-
-
-      autoWidth: true,
-
-      merge: true,
-      mergeFit: true,
-
-      responsive: {
-        320: {
-          items: 1,
-          mergeFit: false,
-          center: true,
-          autoWidth: false
-
-        }, 1024: {
-          items: 5,
-          autoWidth: true,
-          merge: true,
-          mergeFit: true,
-
-        }
-      }
-
-
-
-    });
-
-    $('.slider-2020').owlCarousel({
-
-      autoWidth: true,
-
-      merge: true,
-      mergeFit: true,
-
-      responsive: {
-        320: {
-          items: 1,
-          mergeFit: false,
-          center: true,
-          autoWidth: false
-
-        }, 1024: {
-          items: 5,
-          autoWidth: true,
-          merge: true,
-          mergeFit: true,
-
-        }
-      }
-
-    });
-  </script>
-
-</body>
+</script>
 </body>
 </html>
